tests/cases/fail/dict_pop_key_type.p4
def main() -> None:
    colors: dict[str, str] = {"apple": "red"}
    print(colors.pop(1))
